--- a/index.html
+++ b/index.html
@@ -3,12 +3,74 @@
 
 <head>
   <meta charset="UTF-8" />
+  
+  <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
   <link rel="manifest" href="/favicon_io/site.webmanifest">
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Prompt Tax - Tax preparation reimagined with AI precision.</title>
+  
+  <!-- Primary Meta Tags -->
+  <title>Prompt Tax - AI-Powered Crypto & K-1 Tax Automation with CPA Review</title>
+  <meta name="title" content="Prompt Tax - AI-Powered Crypto & K-1 Tax Automation with CPA Review">
+  <meta name="description" content="Automate cryptocurrency transactions and partnership K-1 forms with AI precision. Get professional CPA review and IRS e-filing. Trusted by 15,000+ taxpayers. Cut data entry time by 95%.">
+  <meta name="keywords" content="crypto tax software, K-1 form automation, cryptocurrency tax, partnership tax forms, AI tax preparation, CPA review, IRS e-filing, crypto tax calculator, tax automation software">
+  <meta name="author" content="Prompt Tax">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://prompt.tax/">
+  <meta property="og:site_name" content="Prompt Tax">
+  <meta property="og:title" content="Prompt Tax - AI-Powered Crypto & K-1 Tax Automation">
+  <meta property="og:description" content="Automate cryptocurrency transactions and partnership K-1 forms with AI precision. Get professional CPA review and IRS e-filing. Trusted by 15,000+ taxpayers.">
+  <meta property="og:image" content="https://businessesppall.nyc3.cdn.digitaloceanspaces.com/prompttax/logos/og/crypto-blog-og-1200x630.jpg">
+  <meta property="og:image:secure_url" content="https://businessesppall.nyc3.cdn.digitaloceanspaces.com/prompttax/logos/og/crypto-blog-og-1200x630.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="Prompt Tax - AI Tax Automation Platform">
+  <meta property="og:image:type" content="image/jpeg">
+  <meta property="og:locale" content="en_US">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://prompt.tax/">
+  <meta property="twitter:site" content="@prompttax">
+  <meta property="twitter:creator" content="@prompttax">
+  <meta property="twitter:title" content="Prompt Tax - AI-Powered Crypto & K-1 Tax Automation">
+  <meta property="twitter:description" content="Automate cryptocurrency transactions and partnership K-1 forms with AI precision. Get professional CPA review and IRS e-filing.">
+  <meta property="twitter:image" content="https://businessesppall.nyc3.cdn.digitaloceanspaces.com/prompttax/logos/og/crypto-blog-twitter-1200x675.jpg">
+  <meta property="twitter:image:alt" content="Prompt Tax - AI Tax Automation Platform">
+  
+  <!-- Additional SEO -->
+  <link rel="canonical" href="https://prompt.tax/">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="English">
+  <meta name="revisit-after" content="7 days">
+  
+  <!-- Schema.org markup -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Prompt Tax",
+    "applicationCategory": "FinanceApplication",
+    "operatingSystem": "Web",
+    "offers": {
+      "@type": "AggregateOffer",
+      "lowPrice": "179",
+      "highPrice": "549",
+      "priceCurrency": "USD"
+    },
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "4.5",
+      "ratingCount": "1470"
+    },
+    "description": "AI-powered tax automation platform for cryptocurrency transactions and K-1 partnership forms with professional CPA review and IRS e-filing."
+  }
+  </script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,7 +112,7 @@
 <body>
   <div id="root"></div>
   <div id="splash-screen">
-    <img alt="Logo" class="light" src="/default.png" style="height: 10%" />
+    <img alt="Prompt Tax - AI Tax Automation" class="light" src="/logos/default-new.png" style="height: 15%; max-width: 400px; object-fit: contain;" />
   </div>
   <script type="module" src="/src/main"></script>
   <script>
