Improve SEO meta tags with proper OG images and enhanced metadata for social sharing-icon.png

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <body>
   <div id="root"></div>
   <div id="splash-screen">
-    <img alt="Prompt Tax - AI Tax Automation" class="light" src="/logos/default-new.png" style="height: 15%; max-width: 400px; object-fit: contain;" />
+    <img alt="Prompt Tax - AI Tax Automation" class="light" src="/logos/icon.png" style="height: 15%; max-width: 400px; object-fit: contain;" />
   </div>
   <script type="module" src="/src/main"></script>
   <script>
