Add Netlify Edge Function for dynamic blog post meta tags (OG/Twitter/Facebook)

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <meta name="author" content="Prompt Tax">
   
   <!-- Open Graph / Facebook -->
+  <meta property="fb:app_id" content="1234567890">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://prompt.tax/">
   <meta property="og:site_name" content="Prompt Tax">
