fix: force absolute asset paths in Vite config

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   <div id="splash-screen">
     <img alt="Prompt Tax - AI Tax Automation" class="light" src="/logos/default.png" style="height: 7.5%; max-width: 200px; object-fit: contain;" />
   </div>
-  <script type="module" src="/src/main"></script>
+  <script type="module" src="/src/main.tsx"></script>
   <script>
     const rootEl = document.querySelector('#root');
     const splashScreen = document.querySelector('#splash-screen');
