feat: add CookieBot consent management and fix server dist path

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <title>Prompt Tax - AI-Powered Crypto & K-1 Tax Automation with CPA Review</title>
   <meta name="title" content="Prompt Tax - AI-Powered Crypto & K-1 Tax Automation with CPA Review">
   <meta name="description" content="Automate cryptocurrency transactions and partnership K-1 forms with AI precision. Get professional CPA review and IRS e-filing. Trusted by 1,500+ taxpayers. Cut data entry time by 95%.">
-  <meta name="keywords" content="crypto tax software, K-1 form automation, cryptocurrency tax, partnership tax forms, AI tax preparation, CPA review, IRS e-filing, crypto tax calculator, tax automation software">
+  <meta name="keywords" content="online Schedule K1, k1 generator, crypto tax software, K-1 form automation, cryptocurrency tax, partnership tax forms, AI tax preparation, CPA review, IRS e-filing, crypto tax calculator, tax automation software">
   <meta name="author" content="Prompt Tax">
   
   <!-- Open Graph / Facebook -->
@@ -76,6 +76,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:wght@400;500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+
+  <!-- Cookiebot -->
+  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="1ecb81ac-afa2-4df1-bad7-fc7633880ba1" data-blockingmode="auto" type="text/javascript"></script>
 
   <style>
     #splash-screen {
