feat: implement custom GDPR/US cookie consent system
- Created custom CookieConsentProvider context with localStorage persistence
- Built responsive cookie consent banner with simple & detailed views
- Implemented cookie categories: Necessary (always on), Analytics, Marketing
- Conditional Google Analytics loading based on user consent
- Added Cookie Preferences link to footer with open preferences functionality
- Removed third-party CookieBot dependency
- GDPR compliant: explicit consent, opt-out options, IP anonymization
- US standards compliant with clear disclosure and preference management

--- a/index.html
+++ b/index.html
@@ -77,9 +77,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:wght@400;500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 
-  <!-- Cookiebot -->
-  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="1ecb81ac-afa2-4df1-bad7-fc7633880ba1" data-blockingmode="auto" type="text/javascript"></script>
-
   <style>
     #splash-screen {
       position: fixed;
@@ -111,19 +108,7 @@
     }
   </style>
   
-    <!-- Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-9MLE8GP7S0"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "G-9MLE8GP7S0");
-    </script>
+  <!-- Google Analytics loaded conditionally by cookie consent -->
 
 </head>
 
