--- a/index.html
+++ b/index.html
@@ -110,6 +110,23 @@
   
   <!-- Google Analytics loaded conditionally by cookie consent -->
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17775098015"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'AW-17775098015');
+  </script>
+
+  <!-- Google tag (gtag.js) event -->
+  <script>
+    gtag('event', 'ads_conversion_Registro_1', {
+      // <event_parameters>
+    });
+  </script>
+
 </head>
 
 <body>
