Add GA and ads gtag tags

--- a/index.html
+++ b/index.html
@@ -108,15 +108,14 @@
     }
   </style>
   
-  <!-- Google Analytics loaded conditionally by cookie consent -->
-
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17775098015"></script>
+  <!-- Google Analytics & Ads (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9MLE8GP7S0"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
+    gtag('config', 'G-9MLE8GP7S0');
     gtag('config', 'AW-17775098015');
   </script>
 
